# obs-desktop_page

./: .gitignore  .vercelignore  README.md  eslint.config.js  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json  tsconfig.node.json  vercel.json  vite.config.ts
.github/workflows/: release.yml
api/: support.ts  update.ts
api/_lib/: posthog.ts  support.test.ts  support.ts  update-server.test.ts  update-server.ts
api/download/[target]/[arch]/[bundleType]/: [version].ts
api/update/[target]/[arch]/[bundleType]/: [currentVersion].ts
scripts/: check-release-version.mjs  import_obs_resources.py  import_platform_catalog.py  push-version-commit.cjs  release.mjs  support_url_resolution_smoke.rs  sync-updater-pubkey.mjs  sync-version.cjs  verify_release_assets.mjs  vetted_obs_github_sources.json
src/: App.tsx  index.css  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json  updater.pub.key
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs
src-tauri/src/commands/: analytics.rs  detect_obs.rs  extract_archive.rs  install_plugin.rs  mod.rs  plugin_paths.rs  settings.rs  state.rs  store.rs  support.rs  update.rs  validate_obs.rs
src-tauri/src/models/: plugin.rs  state.rs
src-tauri/src/utils/: catalog.rs  errors.rs
src/components/: AppUpdateDialog.tsx  CommandPalette.tsx  EmptyState.tsx  ErrorState.tsx  GlobalInstallProgressBar.tsx  InstallErrorPanel.tsx  InstallLocationSection.tsx  InstallProgressModal.tsx  ObsVersionBadge.tsx  PluginCard.tsx  RequiredUpdateScreen.tsx  SetupWizard.tsx
src/components/diagnostics/: DiagnosticLogPanel.tsx  IntegrityCheckRow.tsx  SummaryStatCard.tsx
src/components/layout/: AppShell.tsx
src/components/ui/: Badge.tsx  Button.tsx  ConfirmDialog.tsx  CopyPathField.tsx  ShortcutHint.tsx
src/data/: plugins.json  resources.json
src/lib/: analytics.ts  branding.ts  catalog.ts  errors.ts  installId.ts  installProgress.ts  pluginVisuals.tsx  support.ts  tauri.ts  utils.ts
src/pages/: DashboardPage.tsx  DiagnosticsPage.tsx  DiscoverPage.tsx  FeedbackPage.tsx  InstalledPage.tsx  PluginDetailsPage.tsx  SettingsPage.tsx  UpdatesPage.tsx
src/stores/: appStore.ts
src/types/: desktop.ts  plugin.ts
