[package]
name = "app"
version = "1.0.1"
default-run = "app"
description = "OBS Plugin Installer desktop app built with Tauri"
authors = ["OBS Plugin Installer contributors"]
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.6", features = [] }

[dependencies]
base64 = "0.22"
chrono = { version = "0.4", features = ["serde"] }
dirs = "6"
flate2 = "1"
log = "0.4"
minisign-verify = "0.2.5"
open = "5"
plist = "1"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls"] }
regex = "1"
rfd = "0.15"
semver = "1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tar = "0.4"
tauri = { version = "2.10.3", features = ["tray-icon"] }
tauri-plugin-autostart = "2.5.1"
tauri-plugin-log = "2"
tauri-plugin-updater = "2.10.0"
tempfile = "3"
thiserror = "2"
walkdir = "2"
xz2 = "0.1"
zip = { version = "2.4", default-features = false, features = ["deflate"] }
